# ai-agenttools

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISH.md  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: pr-check.yml  publish.yml
Agent/: chat.py
Tools/: __init__.py  file_io_tools.py  shell_tool.py
agenttools/: __init__.py  csv_tools.py  excel_tools.py  file_io_tools.py  pdf_tools.py  powerpoint_tools.py  shell_tool.py  web_tools.py  word_tools.py
examples/: chat_demo.py
