[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenttools"
version = "0.1.0"
description = "Semantic Kernel plugins for file I/O, Excel operations, and shell commands"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "CC-BY-NC-4.0"}
authors = [
    {name = "Kathan Sanghavi", email = "kathansanghavi@gmail.com"}
]
keywords = ["semantic-kernel", "ai", "agents", "tools", "excel", "file-operations"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "semantic-kernel",
]

[project.optional-dependencies]
excel = ["openpyxl"]
all = ["openpyxl"]

[tool.setuptools.packages.find]
where = ["."]
include = ["Tools*"]

[tool.setuptools.package-data]
Tools = ["py.typed"]
